Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/T8181464/LambdaInAnnotationsCausesNPETest3.out
LambdaInAnnotationsCausesNPETest3.java:10:51: compiler.err.expression.not.allowable.as.annotation.value
1 error
